--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div class="p-5 text-center bg-body-tertiary rounded-3">
     <!-- <svg class="bi mt-4 mb-3" style="color: var(--bs-indigo);" width="100" height="100"><use xlink:href="#bootstrap"/></svg> -->
     <h1 class="display-1">MIZORAM FIRST</h1>
-    <p class="col-lg-8 mx-auto fs-5 text-muted">
+    <p class="col-lg-8 mx-auto fs-5 text-muted tagline">
         I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.
     </p>
     <!-- <div class="d-inline-flex gap-2 mb-5">
@@ -209,7 +209,7 @@
     <h3 class="text-body-emphasis">Mission and Vision</h3>
     <p>Mi tha leh dik, ram hmangaihtu an lo chhuah theihna tura kawng sial leh a chhe lai siam that.</p>
     <h3 class="text-body-emphasis">Thil tum (Objectives)</h3>
-    <ol class="list-unstyled">
+    <ol>
         <li>Kan ram leh hnam hmangaihna rilru dik tak (Mizoram dah hmasak berna rilru) pu tura infuih thar.</li>
         <li>Mizo ngaihhlut thiltha (values) vawn nun leh chawi lar thar leh.</li>
         <li>Sorkar tha siam thei tura mipui buatsaih leh zirtir.</li>
@@ -219,7 +219,6 @@
         <li>Mitinin kan chanvo dik tak kan chan theih nana dan rorelna ('rule of law' leh 'principle of justice') kan rama a lal ber zel theih nana hma lak.</li>
         <li>Eirukna leh ram leh hnam him lohna tur thil dodal.</li>
     </ol>
-    <span class="tagline">I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.</span>
     <!-- <button class="btn btn-primary px-5 mb-5" type="button">
       Call to action
     </button> -->
