--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@
     <p class="col-lg-8 mx-auto fs-5 text-muted tagline">
         I ram leh hnam a boral chuan nang leh I chhungte in him bik lo vang.
     </p>
-    <!-- <div class="d-inline-flex gap-2 mb-5">
-      <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
+    <div class="d-inline-flex gap-2 mb-5">
+      <!-- <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
         Call to action
         <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"/></svg>
       </button>
       <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
         Secondary link
-      </button>
-    </div> -->
+      </button> -->
+    </div>
   </div>
 </div>
 
